fixed improper z-index on coin

--- a/frontend/src/components/Coin/Coin.css
+++ b/frontend/src/components/Coin/Coin.css
@@ -13,7 +13,7 @@
   border-radius: 50%;
   overflow: hidden !important;
   position: relative;
-  z-index: 10;
+  z-index: 1;
 }
 
 .wave {
